syntax = "proto3";

package common;
option go_package = "github.com/go-park-mail-ru/2023_1_Technokaif/internal/pkg/microservices/common/proto/generated";

import "google/protobuf/timestamp.proto";

message UserResponse {
    uint32 id = 1;
	uint32 version = 2;
    string username = 3; 
	string email = 4; 
	string passwordHash = 5; 
	string firstName = 6; 
	string lastName = 7; 
	google.protobuf.Timestamp birthDate = 8; 
	string avatarSrc = 9;
}
